feat: virtual threads, max-clients semaphore, STATS command
Concurrency:
- Switch executor from fixed platform-thread pool to newVirtualThreadPerTaskExecutor
- Each client connection gets its own virtual thread (parking on I/O is cheap)
- Semaphore(POOL_SIZE) enforces max concurrent clients; excess connections are rejected
- POOL_SIZE default raised from 5 to 100; env var meaning is now max_clients

Startup logging:
- Log full config at startup (port, max_clients, thread model, AOF, clean interval)

STATS command:
- Returns a bulk string with uptime_seconds, connected_clients,
  total_commands_processed, total_keys, aof_enabled
- ServerStats tracks counters with AtomicLong/AtomicInteger; ClientHandler
  increments/decrements connected_clients; every executeCommand increments
  total_commands_processed
- IStorage gains size() returning live (non-expired) key count

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>